Issue #2947667 by ok_lyndsey, Kingdutch: Style skip to content so it is easily visible on each page (#2004)
The style is borrowed from Drupal.org. For the colors we've chosen to
use the navigation active link color as it's usually different from the
navbar color itself. Additionally it has a matching text color that
should be configured by platform users to something accessible. This has
the highest chance of resulting in a skip link that is styled to the
platform styles while being accessible.

--- a/themes/socialbase/assets/css/ckeditor.css
+++ b/themes/socialbase/assets/css/ckeditor.css
@@ -56,6 +56,23 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
+#skip-link {
+  text-align: center;
+  position: absolute;
+  left: 0;
+  right: 0;
+  z-index: 15000;
+}
+
+#skip-link a {
+  background: #222222;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
+  color: #f3f3f3;
+  padding: 3px 20px 8px;
+  text-decoration: none;
+  border-radius: 0 0 10px 10px;
+}
+
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   font-family: inherit;
